--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+node_modules/
+.next/
+/out
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
